# GameServer

./: CMakeLists.txt  ThreadTest.cpp  UdpSocket.cpp
FirstTestsUDPSocket/: ThreadTest.cpp  UdpSocket.cpp  server  threadTest
FirstTestsUDPSocket/ClientTest/: ClientTest.cpp  testeClient
FirstTestsUDPSocket/ClientTest/headers/: ConnectPacket.h  InputFlags.h  InputPacket.h  PacketHeader.h  SocketClientForTest.h
FirstTestsUDPSocket/ClientTestWindows/: ClientTest.cpp  testeClient
FirstTestsUDPSocket/ClientTestWindows/headers/: PlayerSnapshot.h  SocketClientForTest.h  WorldSnapshot.h
Src/: main.cpp
Src/GameServer/: GameServer.cpp
Src/Network/: UdpSocket.cpp
Src/SessionManager/: SessionManager.cpp
Src/World/: Player.cpp  World.cpp
Src/headers/GameServer/: GameServer.h
Src/headers/Network/: UdpSocket.h
Src/headers/Network/PacketSystem/: ConnectAcceptdPacket.h  InputFlags.h  PacketType.h  PacketWriter.h
Src/headers/SessionManagement/: Endpoint.h  EndpointHash.h  PlayerSession.h  SessionManager.h
Src/headers/Snapshots/: PlayerSnapshot.h  WorldSnapshot.h
Src/headers/World/: InputState.h  Npc.h  Player.h  Transform.h  World.h
